Migrate Java backend from Java 17 to Java 21
- Update pom.xml java.version from 17 to 21
- Enable virtual threads (spring.threads.virtual.enabled=true)
- Use Sequenced Collections API (getFirst()) in ArticleV2.primaryAuthor()
- Add ContentRenderer using pattern matching for switch (JEP 441) on
  sealed Content interface, demonstrating exhaustive type matching
- Fix PublishingInfo.featured() naming conflict with record accessor
  (renamed to featuredPost())
- Update package-info.java to reference Java 21 sealed types and
  pattern matching capabilities
- Update CLAUDE.md to reflect Java 21 backend